# GoL

./: CMakeLists.txt  GoL.pro  GoL.pro.user.2.5pre1  Makefile  aaaaaaaaaa.graphml  about.cpp  about.h  about.ui  board.cpp  board.cpp.autosave  board.h  config.ini  defaultsettings.h  globalpointers.cpp  globalpointers.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  simplegame.cpp  simplegame.cpp.autosave  simplegame.h  square.cpp  square.cpp.autosave  square.h  statusandcontrol.cpp  statusandcontrol.h
